[package]
name = "mapillary-seq-cleanup"
description = "A simple tool to clean mapillary_tools proceeded GoPro timelapse images."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/littlebtc/mapillary-seq-cleanup"
readme = "README.md"
keywords = ["mapillary"]
categories = ["command-line-utilities"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "mapillary_seq_cleanup"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4.1", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.8"
geo = "0.23"
